--- a/hexagon/index.html
+++ b/hexagon/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hexagon</title>
     <link rel="stylesheet" href="../style.css">
-    <meta name="description" content="This is a simple svg generator where you can also see the angles, on this page you can create a hexagon, but you can choose from; triangle, square, pentagon and hexagon">
+    <meta name="keywords" content="JavaScript, SVG, Angle">
+    <meta name="author" content="Rogier Goossen">
+    <meta name="description" content="This is a simple svg generator where you can also see the angles, on this page you can create a hexagon, but you can choose from; triangle, square, pentagon and hexagon.">
 </head>
 <body>
     <div class="container">
         <svg width="100%" height="100%">
             <path id="path" d="M 200 50 L 350 125 L 350 275 L 200 350 L 50 275 L 50 125 Z" stroke="white" fill="transparent" />
+            
             <circle id="p1" cx="200" cy="50" r="4" fill="grey" cursor="pointer" />
             <circle id="p2" cx="350" cy="125" r="4" fill="grey" cursor="pointer" />
             <circle id="p3" cx="350" cy="275" r="4" fill="grey" cursor="pointer" />
