--- a/square/index.html
+++ b/square/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Square</title>
     <link rel="stylesheet" href="../style.css">
-    <meta name="description" content="This is a simple svg generator where you can also see the angles, on this page you can create a square, but you can choose from; triangle, square, pentagon and hexagon">
+    <meta name="keywords" content="JavaScript, SVG, Angle">
+    <meta name="author" content="Rogier Goossen">
+    <meta name="description" content="This is a simple svg generator where you can also see the angles, on this page you can create a square, but you can choose from; triangle, square, pentagon and hexagon.">
 </head>
 
 <body>
