--- a/triangle/index.html
+++ b/triangle/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <svg width="100%" height="100%">
+        <svg>
             <path id="path" d="M 200 100 L 300 300 L 100 300 Z" stroke="white" fill="transparent" />
             
             <circle id="p1" cx="200" cy="100" r="4" fill="grey" cursor="pointer" />
@@ -131,19 +131,27 @@ points.forEach(point => {
     });
 });
 
-document.addEventListener('mousemove', (e) => {
+const svgElement = document.querySelector('svg');
+
+svgElement.addEventListener('mousemove', (e) => {
     if (selectedPoint) {
-        selectedPoint.x = e.offsetX;
-        selectedPoint.y = e.offsetY;
-        selectedPoint.circle.setAttribute('cx', selectedPoint.x);
-        selectedPoint.circle.setAttribute('cy', selectedPoint.y);
-        updatePath();
+        const newX = e.offsetX;
+        const newY = e.offsetY;
+
+        if (newX >= 0 && newX <= 400 && newY >= 0 && newY <= 400) {
+            selectedPoint.x = newX;
+            selectedPoint.y = newY;
+            selectedPoint.circle.setAttribute('cx', selectedPoint.x);
+            selectedPoint.circle.setAttribute('cy', selectedPoint.y);
+            updatePath();
+        }
     }
 });
 
 document.addEventListener('mouseup', () => {
     selectedPoint = null;
 });
+
 
 loadPathFromURL();
 updatePath();
