--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVG Angle Generator</title>
     <link rel="stylesheet" href="/style.css">
-    <meta name="keywords" content="JavaScript, SVG, Angle">
+    <meta name="keywords" content="JavaScript, SVG, Angle, Generator">
     <meta name="author" content="Rogier Goossen">
-    <meta name="description" content="This is a simple svg generator where you can also see the angles, you can add however many points you want to create your desired shape.">
+    <meta name="description" content="This is a simple svg generator where you can also see the angles, you can add however many points you want to create your desired shape. You can copy the path, share the link or download!">
 </head>
 <body>
     <div class="container" id="container">
