--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta name="description" content="This is a simple svg shape generator where you can also see the angles, you can add however many points you want to create your desired shape.">
 </head>
 <body>
+    <p class="errortext" id="errorText"></p>
     <div class="container" id="container">
-        <p class="errortext" id="errorText"></p>
         <svg>
             <path id="path" d="M 200 100 L 300 300 L 100 300 Z" stroke="white" fill="transparent" />
             
@@ -54,7 +54,7 @@ const errorText = document.getElementById("errorText");
 
 const svgElement = document.querySelector('svg');
 
-errorText.innerHTML = "You are on mobile, and unfortunately dragging the points does not work on mobile just yet."
+errorText.innerHTML = "It looks like you are on a touchscreen device, unfortunately dragging the points does not work on touchscreens just yet."
 
 let selectedPoint = null;
 let snappingEnabled = false;
@@ -265,8 +265,8 @@ function updatePointsFromPath(pathData) {
         if (['M', 'L'].includes(type)) {
             addPoint(coords[0], coords[1]);
         } else if (['C', 'S', 'Q', 'T', 'A'].includes(type)) {
-            errorText.style.display = "block";
-            errorText.innerHTML = "SVG shape generator does not accept svg's with curves, sorry!";
+            errorText.style.opacity = "100%";
+            errorText.innerHTML = "It looks like you are trying to import an SVG document with curves, this doesn't work just yet.";
             setTimeout(() => {
                 reset()
             }, "2500");
