--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>SVG Shape Generator | Create Custom SVG Shapes with Angles & Lengths</title>
+    <title>SVG Shape Generator | Create Custom SVG Shapes</title>
     <meta name="title" content="SVG shape generator" />
     <meta name="description" content="Create custom SVG shapes with adjustable angles. You can add, move, and adjust points to see angles and lengths dynamically." />
 
