--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta property="twitter:description" content="A simple SVG shape / polygon generator where you can also see the angles, you can add however many points you want to create your desired shape." />
 
     <link rel="stylesheet" href="/style.css">
-    <meta name="keywords" content="SVG, Angle, Generator">
+    <meta name="keywords" content="SVG, Angle, Generator, Shape, Polygon">
     <meta name="author" content="Rogier Goossen">
 </head>
 <body>
